--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,10 +19,11 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/app_name"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp"
-            android:gravity="center"
-            android:text="@string/app_name" />
+            android:textStyle="bold" />
     </android.support.v7.widget.Toolbar>
 
     <View
